[project]
name = "darbiadev-fedex"
version = "0.3.0"
description = "A wrapper for FedEx's API"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@darbia.dev" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests>=2.26.0",
    "xmltodict>=0.12,<0.14",
]

[project.urls]
repository = "https://github.com/darbiadev/darbiadev-fedex"
documentation = "https://darbiadev.github.io/darbiadev-fedex/"


[project.optional-dependencies]
dev = [
    "pylint>=2.12.2",
    "pytest>=6.2.5",
    "pytest-cov>=3.0.0",
    "black>=21.12b0",
]
tests = [
    "pytest>=6.2.5",
]
docs = [
    "sphinx>=4.3.2",
    "sphinxcontrib-autoprogram>=0.1.7",
    "sphinx-rtd-theme>=1.0.0",
    "toml>=0.10.2",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.sphinx]
copyright = "Darbia"
author = "Bradley Reynolds"
api_dir = "darbiadev_ups"

[tool.black]
target-version = ["py310"]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "tests -r a -v --doctest-modules src"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.messages_control]
disable = "R0903, R0913"
# justifications:
# R0903 (too-few-public-methods) - FIXME: implement more methods
# R0913 (too-many-arguments) - addresses have lots of fields
